# p12_2016

./: .gitignore  README.md
donto/Keziras_felismeres/: CMakeLists.txt  Sample.cpp  Sample.hpp  input.txt  main.cpp
donto/webshop12/: app.php  config.php  index.php  install.php  mysql.php
donto/webshop12/Controller/: HomeController.php
donto/webshop12/Db/: Database.php
donto/webshop12/Entity/: Category.php  Entity.php  Product.php
donto/webshop12/HTTP/: Request.php  Response.php  Router.php
donto/xml/: compile.sh  main.cpp  my_option_parser.cpp  my_option_parser.h  rule.cpp  rule.h  xml_composer.cpp  xml_composer.h
elodonto/: Amoba_kiertekelo.txt  Ko_papir_ollo_gyik_spock.txt  Sejtautomata_mintazat_kereso.txt  Terkep_illesztes.txt
elodonto/1_feladat_terkep_illesztes/: 1_feladat_terkep_illesztes.rar  CMakeLists.txt  main.cpp
elodonto/2_amoba/: amoba.cbp  amoba0.csv  amoba0.txt  amoba1.csv  amoba1.txt  fiveinarowchecker.cpp  fiveinarowchecker.h  main.cpp  test1.csv
elodonto/3_felada_ko_papir_ollo_gyik_spock/: NetworkMagic.cpp  RPSLS.cpp  RPSLS.hpp
elodonto/3_felada_ko_papir_ollo_gyik_spock/Ko_papir_ollo_client/: AI.cpp  AI.hpp  CMakeLists.txt  NetworkMagic.hpp  RPSLS.cpp  RPSLS.hpp  Tactic.cpp  Tactic.hpp  config.txt  main.cpp
elodonto/3_felada_ko_papir_ollo_gyik_spock/Ko_papir_ollo_client/Tactics/: OnlyOne.cpp  OnlyOne.hpp
elodonto/3_felada_ko_papir_ollo_gyik_spock/Ko_papir_ollo_server/: CMakeLists.txt  config.txt  main.cpp
elodonto/4_sejtautomata/: automata0.txt  cellularautomatafinder.cpp  cellularautomatafinder.h  in2.txt  main.cpp
(+14 files in other folders)
